preparado para desplegar

--- a/src/index.html
+++ b/src/index.html
@@ -2,13 +2,44 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>MoviSearch</title>
+  <title>MovieSearch - Recomendaciones de películas y series con IA</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <meta name="description" content="Descubre peliculas y series: recomendaciones con con Intelgencia Artificial con pocas palabras, Crea tus listas guarda las peliculas y !compartelo!.">
+  <meta name="keywords" content="IA, Intelgencia Artificial, películas, series, búsqueda, recomendación, cine, listas, compartir">
+  <meta name="author" content="Carlos Arroyo">
+
+  <meta name="theme-color" content="#000000">
+  <meta name="mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-title" content="MoviSearch">
+
+
+  <meta property="og:title" content="MoviSearch: Recomendaciones de películas y series con IA">
+  <meta property="og:description" content="Descubre peliculas y series: recomendaciones con con Intelgencia Artificial con pocas palabras, Crea tus listas guarda las peliculas y !compartelo!.">
+  <meta property="og:image" content="/assets/images/previa.png">
+  <meta property="og:url" content="https://www.moviesearch.es">
+
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="MoviSearch: Recomendaciones de películas y series con IA">
+  <meta name="twitter:description" content="Descubre peliculas y series: recomendaciones con con Intelgencia Artificial con pocas palabras, Crea tus listas guarda las peliculas y !compartelo!.">
+  <meta name="twitter:image" content="URL-de-tu-imagen-de-vista-previa.jpg">
+  
+  <link rel="icon" type="image/png" href="/assets/favicon/favicon-96x96.png" sizes="96x96"/>
+  <link rel="icon" type="image/svg+xml" href="/assets/favicon/favicon.svg"/>
+  <link rel="shortcut icon" href="/assets/favicon/favicon.ico" />
+
+  <meta name="apple-mobile-web-app-title" content="MoviSearch.IA"/>
+  <link rel="apple-touch-icon" sizes="180x180" href="/src/assets/icons/icon.png"/>
+
+  <link rel="manifest" href="/assets/favicon/site.webmanifest">
+
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" />
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="/assets/favicon/favicon.ico">
 </head>
 <body>
-  <app-root></app-root>
+  <app-root>
+  </app-root>
 </body>
 </html>
