--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,15 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-99J0ZEMPVX"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-99J0ZEMPVX');
+</script>
   <meta charset="utf-8">
   <title>MovieSearch - Recomendaciones de películas y series con IA</title>
   <base href="/">
