añadidio absoluta al iciono

--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
 
   <meta property="og:title" content="MoviSearch: Recomendaciones de películas y series con IA">
   <meta property="og:description" content="Descubre peliculas y series: recomendaciones con con Intelgencia Artificial con pocas palabras, Crea tus listas guarda las peliculas y !compartelo!.">
-  <meta property="og:image" content="/assets/images/previa.png">
+  <meta property="og:image" content="https://moviesearch.es/assets/images/previa.png">
   <meta property="og:url" content="https://www.moviesearch.es">
 
   <meta name="twitter:card" content="summary_large_image">
@@ -35,14 +35,14 @@
   <meta name="twitter:description" content="Descubre peliculas y series: recomendaciones con con Intelgencia Artificial con pocas palabras, Crea tus listas guarda las peliculas y !compartelo!.">
   <meta name="twitter:image" content="URL-de-tu-imagen-de-vista-previa.jpg">
   
-  <link rel="icon" type="image/png" href="/assets/favicon/favicon-96x96.png" sizes="96x96"/>
+  <link rel="icon" type="image/png" href="https://moviesearch.es/assets/favicon/favicon-96x96.png" sizes="96x96"/>
   <link rel="icon" type="image/svg+xml" href="/assets/favicon/favicon.svg"/>
   <link rel="shortcut icon" href="/assets/favicon/favicon.ico" />
 
   <meta name="apple-mobile-web-app-title" content="MoviSearch.IA"/>
   <link rel="apple-touch-icon" sizes="180x180" href="/src/assets/icons/icon.png"/>
 
-  <link rel="manifest" href="/assets/favicon/site.webmanifest">
+  <link rel="manifest" href="https://moviesearch.es/assets/favicon/site.webmanifest">
 
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" />
   <link rel="icon" type="image/x-icon" href="/assets/favicon/favicon.ico">
